# shrodinger

./: CLAUDE.md  Cargo.toml
.claude/: settings.local.json
src/: block.rs  fs.rs  main.rs  range.rs  service.rs  vfs.rs
src/fs/: context.rs  encryptedfs.rs  file.rs
