[package]
name = "shrodinger"
version = "0.1.0"
edition = "2024"

[dependencies]
winfsp = { version = "0.12", features = [
    "system",
    "debug",
    "windows-62",
    "handle-util",
] }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_WindowsProgramming",
    "Win32_System_Console",
    "Win32_System_IO",
    "Wdk_Foundation",
    "Wdk_Storage_FileSystem",
    "Wdk_System_IO",
    "Wdk_Storage_FileSystem_Minifilters",
    "Wdk_System_SystemServices",
    "Win32_System_Ioctl",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
] }
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0"
widestring = "1"
aes-gcm = { version = "0.10", features = ["std"] }
bson = { version = "3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
argon2 = { version = "0.5", features = ["std"] }
rand = "0.9.2"
thiserror = "2.0"

[build-dependencies]
winfsp = { version = "0.12", features = [
    "system",
    "debug",
    "windows-62",
    "handle-util",
] }
